--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "curl": "^0.1.4",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
     "openai": "^5.22.1"
