--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "npx ts-node bot.ts"
+    "start": "npx ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
