--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "curl": "^0.1.4",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
+    "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
